Small style fix for Views modal.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -173,6 +173,10 @@ table.sticky-header {
   color: #008fdc;
 }
 
+.views-ui-dialog #views-ajax-title {
+  background: #2fa6e5;
+}
+
 /* =============================================================================
    WetKit
    ========================================================================== */
