--- a/sass/components/views/_views.scss
+++ b/sass/components/views/_views.scss
@@ -9,3 +9,7 @@
 .views-ui-display-tab-actions .ctools-button-processed input {
   color: #008fdc;
 }
+
+.views-ui-dialog #views-ajax-title {
+  background: #2fa6e5;
+}
