--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -46,6 +46,24 @@ ul.action-links {
   color: #008fdc;
 }
 
+.views-ui-dialog #edit-selected {
+  display: block;
+  position: relative;
+  padding: 0px 16px 30px 30px;
+}
+
+.views-ui-dialog .scroll {
+  padding: 0em 2em 3em;
+}
+
+.views-ui-dialog #views-filterable-options-controls {
+  padding-top: 0px;
+}
+
+#views-ui-preview-form > div > div#preview-submit-wrapper {
+  margin: 0em .5em 0 0;
+}
+
 /* =============================================================================
    Media
    ========================================================================== */
