--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -64,6 +64,23 @@ ul.action-links {
   margin: 0em .5em 0 0;
 }
 
+/* Animated throbber */
+html.js .form-autocomplete {
+  background-image: url(../images/throbber-inactive.png);
+  background-repeat: no-repeat;
+  background-size: 1em;
+}
+html.js[dir="ltr"] .form-autocomplete {
+  background-position: 100% center;
+  /* LTR */
+}
+html.js[dir="ltr"] .throbbing {
+  background: transparent url(../images/throbber-active.gif) no-repeat 0px center;
+  display: inline;
+  background-position: 100% center;
+  /* LTR */
+}
+
 /* =============================================================================
    Media
    ========================================================================== */
