Issue #2160677 by sonofxavier: Double drop down menu arrows in Internet Explorer (IE) .

--- a/css/ie/ie.css
+++ b/css/ie/ie.css
@@ -22,3 +22,26 @@ kbd {
   opacity: 1;
   filter: alpha(opacity=100);
 }
+
+.form-type-select {
+  position: relative;
+  display: inline-block;
+  z-index: 0;
+}
+
+.form-type-select select {
+  z-index: 1;
+}
+
+.form-type-select:before {
+  display: block;
+  position: absolute;
+  content: '';
+  right: 45px;
+  top: 5px;
+  height: 1.7em;
+  width: 2em;
+  margin: 2px;
+  background: #FFF;
+  z-index: 5;
+}
