Fix for replacement patterns in Views UI.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -212,6 +212,10 @@ table.sticky-header {
   background: #2fa6e5;
 }
 
+.views-ui-dialog .form-wrapper .collapsed {
+  height: auto;
+}
+
 /* =============================================================================
    WetKit
    ========================================================================== */
