--- a/sass/components/views/_views.scss
+++ b/sass/components/views/_views.scss
@@ -13,3 +13,7 @@
 .views-ui-dialog #views-ajax-title {
   background: #2fa6e5;
 }
+
+.views-ui-dialog .form-wrapper .collapsed {
+  height: auto;
+}
