--- a/sass/components/ember/_ember.scss
+++ b/sass/components/ember/_ember.scss
@@ -109,3 +109,37 @@ html.js {
     }
   }
 }
+
+.page-node-edit {
+  .ui-widget-overlay {
+    position: fixed;
+  }
+}
+
+.page-media-browser #media-browser-page-wrapper {
+  border-top: none;
+}
+
+.media-wrapper
+.ui-dialog-titlebar {
+  .ui-icon-closethick {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+  }
+  background-color: #2fa6e5;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 10px;
+  padding-left: 30px;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.media-wrapper
+.ui-dialog .ui-dialog-titlebar-close {
+  right: .6em;
+}
