Issue #2202319 by StephenOTT: Use the administration theme when editing or creating content.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -89,6 +89,12 @@ html.js[dir="ltr"] .throbbing {
   border-top: none;
 }
 
+.ui-dialog-titlebar .ui-icon-closethick {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
 .media-wrapper
 .ui-dialog-titlebar {
   background-color: #2fa6e5;
