--- a/sass/components/ember/_ember.scss
+++ b/sass/components/ember/_ember.scss
@@ -120,6 +120,14 @@ html.js {
   border-top: none;
 }
 
+.ui-dialog-titlebar {
+  .ui-icon-closethick {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+  }
+}
+
 .media-wrapper
 .ui-dialog-titlebar {
   .ui-icon-closethick {
