--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -9,6 +9,10 @@
   background: #CCC;
 }
 
+.views-displays .ctools-collapsible-container .ctools-collapsible-handle {
+  background: none;
+}
+
 /* =============================================================================
    Ember
    ========================================================================== */
