--- a/sass/components/ctools/_ctools.scss
+++ b/sass/components/ctools/_ctools.scss
@@ -13,3 +13,11 @@
     background: #CCC;
   }
 }
+
+.views-displays {
+  .ctools-collapsible-container {
+    .ctools-collapsible-handle {
+      background: none;
+    }
+  }
+}
