--- a/sass/components/ctools/_ctools.scss
+++ b/sass/components/ctools/_ctools.scss
@@ -8,16 +8,10 @@
   }
 }
 
-.ctools-collapsible-container {
-  .ctools-collapsible-handle {
-    background: #CCC;
-  }
-}
-
-.views-displays {
+.page-node {
   .ctools-collapsible-container {
     .ctools-collapsible-handle {
-      background: none;
+      background: #CCC;
     }
   }
 }
