--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -66,6 +66,10 @@ html.js[dir="ltr"] .throbbing {
   /* LTR */
 }
 
+.wetkit-site-overview p {
+  max-width: none;
+}
+
 /* =============================================================================
    Features
    ========================================================================== */
