--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -70,6 +70,15 @@ html.js[dir="ltr"] .throbbing {
   max-width: none;
 }
 
+.ui-widget-overlay {
+  position: fixed;
+}
+
+.ui-dialog .ui-dialog-titlebar-close span {
+  margin-left: -8px;
+  margin-top: -8px;
+}
+
 /* =============================================================================
    Features
    ========================================================================== */
