--- a/sass/components/views/_views.scss
+++ b/sass/components/views/_views.scss
@@ -6,6 +6,11 @@
   border-color: #008fdc;
 }
 
+.views-displays .views-display-settings {
+  clear: both;
+  margin-top: 4em;
+}
+
 .views-ui-display-tab-actions .ctools-button-processed input {
   color: #008fdc;
 }
