--- a/sass/components/ember/_ember.scss
+++ b/sass/components/ember/_ember.scss
@@ -16,6 +16,24 @@ ul {
   }
 }
 
+#branding {
+  color: #FFF;
+  background-color: #555555;
+  h1.page-title {
+    margin: 0.25em 0em 0.25em 0em;
+  }
+  .breadcrumb {
+    color: #fff;
+    margin: 0;
+    a {
+      color: #fff;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
 #block-system-main {
   .fieldset-wrapper {
     .form-item-filters-per-page,
