--- a/sass/components/ember/_ember.scss
+++ b/sass/components/ember/_ember.scss
@@ -16,7 +16,7 @@ ul {
   }
 }
 
-#branding {
+div#branding {
   color: #FFF;
   background-color: #555555;
   h1.page-title {
@@ -30,6 +30,11 @@ ul {
       &:hover {
         text-decoration: underline;
       }
+    }
+  }
+  ul.secondary {
+    a.active {
+      color: #008fdc;
     }
   }
 }
