Fix issues with Ember base theme setting clear:both to clear fix instead of just clear fix:before.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -235,6 +235,13 @@ table.sticky-header {
   position: relative !important;
 }
 
+.content .left.clearfix, .content .right.clearfix {
+  clear: none;
+}
+.content .system-themes-list .theme-selector.clearfix {
+  clear: none;
+}
+
 /* =============================================================================
    Views
    ========================================================================== */
