Issue #2303747 by gdaw: Fixed admin theme wetkit_ember causes Problems in Metatag option to 'Browse available tokens'.

--- a/sass/components/ember/_ember.scss
+++ b/sass/components/ember/_ember.scss
@@ -94,6 +94,10 @@ html.js {
   }
 }
 
+.token-tree .expander {
+  margin-left: 0px!important;
+}
+
 .wetkit-site-overview p {
   max-width: none;
 }
