--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -84,6 +84,10 @@ html.js[dir="ltr"] .throbbing {
   /* LTR */
 }
 
+.token-tree .expander {
+  margin-left: 0px !important;
+}
+
 .wetkit-site-overview p {
   max-width: none;
 }
