Issue #2284345 by joseph.olstad: Fixed views add button above field section instead of inside field section.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -236,6 +236,10 @@ table.sticky-header {
   clear: both;
   margin-top: 4em;
 }
+.views-displays .views-display-settings .ctools-dropbutton-wrapper {
+  position: relative;
+  min-height: initial;
+}
 
 .views-ui-display-tab-actions .ctools-button-processed input {
   color: #008fdc;
