--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -41,6 +41,9 @@ ul.action-links {
 #branding .breadcrumb a:hover {
   text-decoration: underline;
 }
+#branding ul.secondary a.active {
+  color: #008fdc;
+}
 
 #block-system-main .fieldset-wrapper .form-item-filters-per-page,
 #block-system-main .fieldset-wrapper .form-item-filters-types {
@@ -165,6 +168,14 @@ html.js[dir="ltr"] .throbbing {
   border-color: #ffffff;
 }
 
+th.active a:before {
+  border-bottom: 2px solid #008fdc;
+  top: -2px;
+  background-color: white;
+  height: 100%;
+  z-index: -1;
+}
+
 .tabs.primary {
   margin: 1em 0 1em 0;
   padding: 0;
@@ -175,6 +186,9 @@ ul.secondary {
   padding: .5em 3.5em;
   background-color: #3b3b3b;
   box-shadow: none;
+}
+ul.secondary a.active {
+  color: #008fdc;
 }
 
 #tab-bar ul.secondary {
