--- a/sass/components/module_filter/_module_filter.scss
+++ b/sass/components/module_filter/_module_filter.scss
@@ -2,8 +2,7 @@
    Module Filter
    ========================================================================== */
 
-#module-filter-squeeze {
-  table {
-    clear: none;
-  }
+form#system-modules #module-filter-modules th:nth-child(4),
+form#system-modules #module-filter-modules td:nth-child(4) {
+  width: auto;
 }
